@@ -1,6 +1,13 @@
 package io.javaoperatorsdk.operator.processing.event.source;
 
-import java.util.*;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -90,8 +97,7 @@ public abstract class ExternalResourceCachingEventSource<R, P extends HasMetadat
   }
 
   protected synchronized void handleResources(Map<ResourceID, Set<R>> allNewResources) {
-    var toDelete = cache.keySet().stream().filter(k -> !allNewResources.containsKey(k))
-        .collect(Collectors.toList());
+    var toDelete = cache.keySet().stream().filter(k -> !allNewResources.containsKey(k)).toList();
     toDelete.forEach(this::handleDelete);
     allNewResources.forEach(this::handleResources);
   }
@@ -153,21 +159,15 @@ public abstract class ExternalResourceCachingEventSource<R, P extends HasMetadat
         .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
 
     if (onUpdateFilter != null || genericFilter != null) {
-      var anyUpdated = possibleUpdatedResources.entrySet().stream()
+      return possibleUpdatedResources.entrySet().stream()
           .anyMatch(
               entry -> {
                 var newResource = newResourcesMap.get(entry.getKey());
                 return acceptedByGenericFiler(newResource) &&
                     onUpdateFilter.accept(newResource, entry.getValue());
               });
-      if (anyUpdated) {
-        return true;
-      }
-    } else if (!possibleUpdatedResources.isEmpty()) {
-      return true;
-    }
-
-    return false;
+    } else
+      return !possibleUpdatedResources.isEmpty();
   }
 
   private boolean acceptedByGenericFiler(R resource) {
